Rename component folder

--- a/src/components/App/Content/Content.module.scss
+++ b/src/components/App/Content/Content.module.scss
@@ -1,7 +1,8 @@
-
 .content {
+  margin: 20px 0;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));                      
   grid-column-gap: 20px;
   grid-row-gap: 20px;
+  justify-items: center
 }
