--- a/src/components/App/Filters/Button/Button.module.scss
+++ b/src/components/App/Filters/Button/Button.module.scss
@@ -5,6 +5,7 @@
   border: none;
   min-width: 50px;
   height: 30px;
+  cursor: pointer;
 }
 
 .activeItem {
@@ -14,6 +15,7 @@
   border: none;
   min-width: 50px;
   height: 30px;
+  cursor: pointer;
  
   background-color: coral;
   align-items: center;
