--- a/src/components/App/Filters/Sort/Sort.module.scss
+++ b/src/components/App/Filters/Sort/Sort.module.scss
@@ -2,14 +2,22 @@
   border: none;
   background-color: white;
   font-size: 18px;
+  color: rgb(231, 119, 90);
+  border-bottom: 1px dashed rgb(231, 119, 90);
+  cursor: pointer;
+  margin: 0 5px;
+}
+
+.currentProp:hover {
   color: coral;
   border-bottom: 1px dashed coral;
-  cursor: pointer;
 }
 
 .properties {
   position: relative;
   padding-right: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .container {
@@ -19,12 +27,12 @@
 
 .popup {
   position: absolute;
-  margin-top: 15px;
   background: #ffffff;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
   border-radius: 10px;
   overflow: hidden; 
-  width: 100%;
+  top: 180%;
+  z-index: 1;
 }
 
 .popupContent {
@@ -42,4 +50,32 @@
 .popupItem:hover {
   color: coral;
   background: rgba(254, 95, 30, 0.05);
+}
+
+.deleteButton {
+  background: none;
+  border: none;
+  height: 20px;
+  width: 20px;
+}
+
+.deleteButton:hover {
+  color: red;
+  cursor: pointer;
+}
+
+.popupContainer {
+  height: 300px;
+  overflow-y: scroll;
+}
+
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
