--- a/src/components/App/Header/Search/Search.module.scss
+++ b/src/components/App/Header/Search/Search.module.scss
@@ -25,3 +25,15 @@ input:focus {
   border: 1px solid rgba(0, 0, 0, 0.5);
   outline: none;
 }
+
+.deleteButton {
+  background: none;
+  border: none;
+  width: 20px;
+  height: 20px;
+  height: 22px;
+  right: 30px;
+  opacity: .3;
+  position: absolute;
+  top: 12px;
+}
