--- a/src/components/Content/CardItem/CardItem.module.scss
+++ b/src/components/Content/CardItem/CardItem.module.scss
@@ -27,6 +27,7 @@
   display: block;
   transition: 1s;
   height: 145px;
+  width: 100%;
   bottom: 0;
   padding: 20px;
   background:rgba(255, 254, 254, 0.586);
