--- a/src/Pages/NotfoundPage/NotfoundPage.module.scss
+++ b/src/Pages/NotfoundPage/NotfoundPage.module.scss
@@ -1,5 +1,14 @@
 .wrapper {
-
+  width: 100%;
+  height: 90%;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  overflow: auto;
 }
 
 .info {
