--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,3 +1,7 @@
+.wrapper {
+  margin: 20px;
+}
+
 .wrapperEmptyCart {
   display: flex;
   justify-content: center;
@@ -29,4 +33,49 @@
   flex-wrap: wrap;
   flex-direction: column;
   margin-right: 100px;
+}
+
+
+.buttonRemoveItems {
+  display: flex;
+  align-items: center;
+  background: white;
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
+  color: black;
+}
+
+.trashIcon {
+  height: 25px;
+  width: 25px;
+}
+
+.removeItems {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.buttonRemoveItems:hover {
+  color: red;
+}
+.paymentLink {
+  color: black;
+}
+
+.payment {
+  margin-top: 15px;
+  background: rgb(79, 223, 1);
+  font-size: 30px;
+  border: none;
+  border-radius: 50px;
+  padding: 15px;
+  font-size: 20px;
+}
+
+.payment:hover {
+  background: rgb(85, 242, 1);;
+  font-size: 30px;
+  border: none;
 }
