--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
-/*!**********************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./src/components/Store/Store.module.scss ***!
-  \**********************************************************************************************************************/
-.Store-module_wrapper____ohz {
+/*!***********************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./src/Pages/MainPage/MainPage.module.scss ***!
+  \***********************************************************************************************************************/
+.MainPage-module_wrapper__Z_xgU {
     width: calc(100vw - 100px);
     margin: auto;
     max-width: 1400px;
