--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Alice-Regular; 
-  src: url(../../../assets/fonts/Alice-Regular.ttf); 
+  src: url(../../assets/fonts/Alice-Regular.ttf); 
  }
 
 a {
